--- a/tql_gui/src/styles.css
+++ b/tql_gui/src/styles.css
@@ -43,10 +43,12 @@ h1 {
 }
 
 input,
+select,
 button {
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
+    margin: 0 0.2em;
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
@@ -54,6 +56,7 @@ button {
     background-color: #ffffff;
     transition: border-color 0.25s;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    outline: none;
 }
 
 button {
@@ -69,12 +72,7 @@ button:active {
     background-color: #e8e8e8;
 }
 
-input,
-button {
-    outline: none;
-}
-
-#greet-input {
+#newinst-input {
     margin-right: 5px;
 }
 
@@ -89,9 +87,14 @@ button {
     }
 
     input,
+    select,
+    button {
+        background-color: #0f0f0f98;
+    }
+
+    input,
     button {
         color: #ffffff;
-        background-color: #0f0f0f98;
     }
 
     button:active {
