--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ body .container:last-of-type {
 * Modal Stuff
 */
 
-.modal-bg {
+#modal-bg {
     display: none;
     position: fixed;
     z-index: 1;
@@ -47,7 +47,7 @@ body .container:last-of-type {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-.modal-content {
+#modal-content {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
@@ -121,7 +121,7 @@ h1 {
     font-weight: 500;
     font-family: inherit;
     color: #0f0f0f;
-    background-color: #ffffff;
+    background-color: white;
     transition: border-color 0.25s;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     outline: none;
@@ -152,17 +152,23 @@ button:active {
 
 button.btn-play {
     background-color: green;
-    color: #ffffff;
+    color: white;
 }
 
 button.btn-edit {
     background-color: rebeccapurple;
-    color: #ffffff;
+    color: white;
 }
 
-button#btn-delete {
+button.btn-cancel {
+    background-color: #cfcfcf;
+    color: black;
+}
+
+button#btn-delete,
+button.btn-delconf {
     background-color: #8c0b0b;
-    color: #ffffff;
+    color: white;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -177,7 +183,7 @@ button#btn-delete {
 
     .fancy-bg {
         background-color: #0f0f0f98;
-        color: #ffffff;
+        color: white;
     }
 
     select.fancy-bg {
