show delete modal

--- a/src/styles.css
+++ b/src/styles.css
@@ -45,6 +45,7 @@ body .container:last-of-type {
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
+    color: black;
 }
 
 #modal-content {
@@ -53,20 +54,6 @@ body .container:last-of-type {
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-}
-
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
 }
 
 /*
