add "show edge" checkbox

--- a/src/styles.css
+++ b/src/styles.css
@@ -154,6 +154,11 @@ button:active {
     flex: 1;
 }
 
+input[type="checkbox"] {
+    height: 100%;
+    padding: auto;
+}
+
 button.btn-play {
     background-color: green;
     color: white;
