make tab list switch tabs

--- a/src/styles.css
+++ b/src/styles.css
@@ -190,6 +190,10 @@ button.tab-btn-selected {
     color: #0f0f0f;
 }
 
+.tab {
+    display: none;
+}
+
 @media (prefers-color-scheme: dark) {
     :root {
         color: #f6f6f6;
